--- a/templates/admin_report.html
+++ b/templates/admin_report.html
@@ -38,18 +38,26 @@
 <body>
     <header>
         <div class="logo-container">
+            <a href="{{ url_for('admin_dashboard') }}">
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+            </a>
         </div>
         <nav>
             <ul>
                 <li><a href="{{ url_for('admin_dashboard') }}">Home page</a></li>
                 <li><a href="{{ url_for('admin_view_account') }}">View account</a></li>
                 <li><a href="{{ url_for('admin_report') }}">Report</a></li>
-                <li><a href="{{ url_for('admin_authorize_teacher_account') }}">Create account</a></li>
+                <li><a href="{{ url_for('admin_authorize_teacher_account') }}">Authorize account</a></li>
                 <li><a href="{{ url_for('admin_create_notification') }}">Create notification</a></li>
             </ul>
         </nav>
-        <img src="{{ url_for('static', filename='images/admin.png') }}" alt="Admin Icon" class="admin">
+        <div class="student-menu">
+            <img src="{{ url_for('static', filename='images/admin.png') }}" alt="Student Icon" class="student" onclick="toggleMenu()">
+            <div class="dropdown-menu" id="dropdownMenu">
+                <a href="{{ url_for('admin_profile') }}">Profile</a>
+                <a href="{{ url_for('logout') }}">Logout</a>
+            </div>
+        </div>
     </header>
   
     <div class="report">
@@ -96,5 +104,15 @@
             });
         </script>
     </div>
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('dropdownMenu');
+            if (menu.style.display === 'block') {
+                menu.style.display = 'none';
+            } else {
+                menu.style.display = 'block';
+            }
+        }
+    </script>
 </body>
 </html>
