--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="{{ url_for('home') }}">
+        <a href="{{ url_for('index') }}">
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
         </a></li>
         <nav>
