--- a/templates/teacher_index.html
+++ b/templates/teacher_index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     <header>
-        <a href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
         </a></li>
         <nav>
             <ul>
-                <li><a href="{{ url_for('signin') }}">Sign in</a></li>
-                <li><a href="{{ url_for('signup') }}">Sign up</a></li>
+                <li><a href="{{ url_for('teacher_signin') }}">Sign in</a></li>
             </ul>
         </nav>
     </header>
